--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@ h1, h2, h3, h4, h5, h6 {
     <a href="#home" class="w3-bar-item w3-button">Rence Restaurant</a>
     <!-- Right-sided navbar links. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
+      <a href="index.html" class="w3-bar-item w3-button">Home</a>
       <a href="about us.html" class="w3-bar-item w3-button">About Us</a>
       <a href="contact.html" class="w3-bar-item w3-button">Contact Us</a>
+       <a href="registration.html" class="w3-bar-item w3-button">Registration</a>
       <a href="login.html" class="w3-bar-user w3-button">Login</a>
 
     </div>
