--- a/about.html
+++ b/about.html
@@ -1,3 +1,32 @@
+ <!DOCTYPE html>
+<html>
+<title>Clarence a Catering</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+body {font-family: "Times New Roman", Georgia, Serif;}
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Playfair Display";
+  letter-spacing: 5px;
+}
+</style>
+<body>
+
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
+    <a href="#home" class="w3-bar-item w3-button">Rence Restaurant</a>
+    <!-- Right-sided navbar links. Hide them on small screens -->
+    <div class="w3-right w3-hide-small">
+      <a href="index.html" class="w3-bar-item w3-button">Home</a>
+      <a href="about us.html" class="w3-bar-item w3-button">About Us</a>
+      <a href="contact.html" class="w3-bar-item w3-button">Contact Us</a>
+       <a href="registration.html" class="w3-bar-item w3-button">Registration</a>
+      <a href="login.html" class="w3-bar-user w3-button">Login</a>
+
+    </div>
+  </div>
  <!-- About Section -->
   <div class="w3-row w3-padding-64" id="about">
     <div class="w3-col m6 w3-padding-large w3-hide-small">
@@ -5,7 +34,7 @@
     </div>
 ​
     <div class="w3-col m6 w3-padding-large">
-      <h1 class="w3-center">About Catering</h1><br>
+      <h1 class="w3-center">About Restaurant</h1><br>
       <h5 class="w3-center">Tradition since 2018</h5>
       <p class="w3-large">Catering is defined as the business of providing food and drink, typically at social events and in a professional capacity either on-site or at a remote site. The term was originally coined by the Merchant Marines, who were among the first to employ catering officers for their vessels. These catering officers were responsible for purchasing goods, preparing food, and serving the meals and beverages to the other people on board the vessels. They also had to perform other ship-related tasks.
 
