--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <center>
    <div class="header">
       <div class="container">
-        <h1 style="color: black ;">Jen'z Pharmacy</h1>
+        <h1 style="color: black ;">Rence Restaurant</h1>
         <p style="color: black ;"></p>
         <p style="color: black ;"></p>
         
