--- a/index.html
+++ b/index.html
@@ -1,29 +1,52 @@
 <!DOCTYPE html>
 <html>
-    
-        <title></title>
-        <link href='style.css'  rel='stylesheet'>
+<title>Clarence a Catering</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+body {font-family: "Times New Roman", Georgia, Serif;}
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Playfair Display";
+  letter-spacing: 5px;
+}
+</style>
 <body>
-    <ul>
-    <li><a class="a" href="index.html">Home</a></li>
-    <li><a class="" href="aboutus.html">About Us</a></li>
-    <li><a class="" href="login.html">Login</a> </li>
-     <li><a class="" href="contactus.html">Contact Us</a></li>
-    </ul>
-    <br><br> <br><br> <br><br> <br><br>
 
-  <head>
-  <center>
-   <div class="header">
-      <div class="container">
-        <h1 style="color: black ;">Rence Restaurant</h1>
-        <p style="color: black ;"></p>
-        <p style="color: black ;"></p>
-        
-      </div>
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
+    <a href="#home" class="w3-bar-item w3-button">Rence Restaurant</a>
+    <!-- Right-sided navbar links. Hide them on small screens -->
+    <div class="w3-right w3-hide-small">
+      <a href="index.html" class="w3-bar-item w3-button">Home</a>
+      <a href="about.html" class="w3-bar-item w3-button">About Us</a>
+      <a href="contact.html" class="w3-bar-item w3-button">Contact Us</a>
+       <a href="registration.html" class="w3-bar-item w3-button">Registration</a>
+      <a href="login.html" class="w3-bar-user w3-button">Login</a>
+
     </div>
-  </center>
-  </head>
+  </div>
+</div>
 
-</body>
-</html>
+
+
+
+
+
+
+
+<!-- Header -->
+<header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
+  <img class="w3-image" src="front.jpg" alt="" width="1600" height="800">
+  <div class="w3-display-bottomleft w3-padding-large w3-opacity">
+    <h1 class="w3-xxlarge">Rence Restaurant</h1>
+  </div>
+</header>
+
+<!-- Page content -->
+<div class="w3-content" style="max-width:1100px">
+
+
+  
+  
