--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </div>
 </div>
   <div class="main">
-    <img src="images/front.jpg" style="width:100%">
+    <img src="front.jpg" style="width:100%">
   </div>
 
 </body>
