--- a/index.html
+++ b/index.html
@@ -24,16 +24,19 @@
 </style>
 </head>
 <body style="font-family:Verdana;">
-<div style="background-color:yellow;padding:25px;">
-   <div class="w3-right w3-hide-small">
-       <a href="index.html" class="w3-bar-item w3-button">Home</a>
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
+    <a href="#home" class="w3-bar-item w3-button">Rence Restaurant</a>
+    <!-- Right-sided navbar links. Hide them on small screens -->
+    <div class="w3-right w3-hide-small">
+      <a href="index.html" class="w3-bar-item w3-button">Home</a>
       <a href="about.html" class="w3-bar-item w3-button">About Us</a>
       <a href="contact.html" class="w3-bar-item w3-button">Contact Us</a>
-      <a href="registration.html" class="w3-bar-item w3-button">Registration</a>
+       <a href="registration.html" class="w3-bar-item w3-button">Registration</a>
       <a href="login.html" class="w3-bar-user w3-button">Login</a>
 
     </div>
-</div>
+  </div>
   <div class="main">
     <img src="front.jpg" style="width:100%">
   </div>
