--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
  <!DOCTYPE html>
 <html>
-<title>Clarence a Catering</title>
+<title>Clarence Catering</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -14,6 +14,45 @@ h1, h2, h3, h4, h5, h6 {
 <body>
 
 <!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
+    <a href="#home" class="w3-bar-item w3-button">Rence Restaurant</a>
+    <!-- Right-sided navbar links. Hide them on small screens -->
+    <div class="w3-right w3-hide-small">
+      <a href="index.html" class="w3-bar-item w3-button">Home</a>
+      <a href="about.html" class="w3-bar-item w3-button">About Us</a>
+      <a href="contact.html" class="w3-bar-item w3-button">Contact Us</a>
+       <a href="registration.html" class="w3-bar-item w3-button">Registration</a>
+      <a href="login.html" class="w3-bar-user w3-button">Login</a>
+
+    </div>
+  </div>
+  <!DOCTYPE html>
+<html>
+<title>Restaurant</title>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+@media only screen and (max-width:800px) {
+  /* For tablets: */
+  .main {
+    width: 100%;
+    padding: 0;
+  } 
+}
+@media only screen and (max-width:500px) {
+  /* For mobile phones: */
+  .menu, .main, .left {
+    width: 100%;
+  }
+}
+</style>
+</head>
+<body style="font-family:Verdana;">
 <div class="w3-top">
   <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
     <a href="#home" class="w3-bar-item w3-button">Rence Restaurant</a>
