--- a/about.html
+++ b/about.html
@@ -1,33 +1,4 @@
- <!DOCTYPE html>
-<html>
-<title>Clarence Catering</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<style>
-body {font-family: "Times New Roman", Georgia, Serif;}
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Playfair Display";
-  letter-spacing: 5px;
-}
-</style>
-<body>
-
-<!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-    <a href="#home" class="w3-bar-item w3-button">Rence Restaurant</a>
-    <!-- Right-sided navbar links. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
-      <a href="index.html" class="w3-bar-item w3-button">Home</a>
-      <a href="about.html" class="w3-bar-item w3-button">About Us</a>
-      <a href="contact.html" class="w3-bar-item w3-button">Contact Us</a>
-       <a href="registration.html" class="w3-bar-item w3-button">Registration</a>
-      <a href="login.html" class="w3-bar-user w3-button">Login</a>
-
-    </div>
-  </div>
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <title>Restaurant</title>
 <head>
@@ -66,22 +37,18 @@ h1, h2, h3, h4, h5, h6 {
 
     </div>
   </div>
- <!-- About Section -->
-  <div class="w3-row w3-padding-64" id="about">
-   
-​
-    <div class="w3-col m6 w3-padding-large">
-      <h1 class="w3-center">About Restaurant</h1><br>
-      <h5 class="w3-center">Tradition since 2018</h5>
-      <p class="w3-large">Catering is defined as the business of providing food and drink, typically at social events and in a professional capacity either on-site or at a remote site. The term was originally coined by the Merchant Marines, who were among the first to employ catering officers for their vessels. These catering officers were responsible for purchasing goods, preparing food, and serving the meals and beverages to the other people on board the vessels. They also had to perform other ship-related tasks.
-
-The catering industry is still very young.Almira Catering started booming after the war when companies who had previously made food supplies for World War II needed something to do. As people became wealthier and the economy grew, caterers found there was a demand for their services, which has previously been reserved for the very rich.
-
- <span class="w3-tag w3-light-grey"></span></p>
-      <p class="w3-large w3-text-grey w3-hide-medium">The modern improvement of transportation, technical innovations, population increase, and sudden rise in the trade of travel and tourism has given gastronomy today an ever increasing rise in popularity and major factor in our current economy. Almira Catering is proud to be part of this rich and colored history of gastronomy for nearly 2 years.</p>
-    </div>
-  </div>
-  
- 
-  <hr>
-  <hr>
+   <section id="contact-info">
+        </div>
+            <div class="center wow fadeInDown">
+                <h2>What and how we do?</h2>
+                <p class="lead">Online Restaurant is a food ordering and delivery company based out of Negros Occidental, Negros. Online Restaurant was inspired by the thought of providing a complete food 
+                    ordering and delivery solution from the best neighbourhood restaurants to the urban foodie. A single window for ordering from a wide range of 
+                    restaurants, we have our own exclusive fleet of delivery personnel to pickup orders from restaurants and deliver it to customers. Having our own
+                    fleet gives us the flexibility to offer customers a no minimum order policy on any restaurant and accept online payments for all partner restaurants
+                    that we work with. Our delivery personnel carry one order at a time which ensures we get reliable and fast deliveries</p>.
+            </div>
+            <div class="center wow fadeInDown">
+               <h2>Online Restaurant Profile</h2>
+                <p class="lead">Online Restaurant Services aim to provide excellent quality service to client ensuring customer satisfaction through a service with value and personalization performed by a highly knowledgeable and experienced professional. My concentration shall and always will be to assist the clients in achieving their dream of a perfect food eating while maintaining my ideas and integrity in the line of customer.</p>
+               
+            </div>
