--- a/registration.html
+++ b/registration.html
@@ -25,11 +25,11 @@ input[type=text], input[type=password] {
   margin: 5px 0 22px 0;
   display: inline-block;
   border: none;
-  background: #f1f1f1;
+  background: white;
 }
 
 input[type=text]:focus, input[type=password]:focus {
-  background-color: #ddd;
+  background-color: white;
   outline: none;
 }
 
@@ -62,9 +62,24 @@ a {
 
 /* Set a grey background color and center the text of the "sign in" section */
 .signin {
-  background-color: #f1f1f1;
+  background-color: white;
   text-align: center;
-}
+}</style>
+</head>
+<body style="font-family:Verdana;">
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
+    <a href="#home" class="w3-bar-item w3-button">Rence Restaurant</a>
+    <!-- Right-sided navbar links. Hide them on small screens -->
+    <div class="w3-right w3-hide-small">
+      <a href="index.html" class="w3-bar-item w3-button">Home</a>
+      <a href="about.html" class="w3-bar-item w3-button">About Us</a>
+      <a href="contact.html" class="w3-bar-item w3-button">Contact Us</a>
+       <a href="registration.html" class="w3-bar-item w3-button">Registration</a>
+      <a href="login.html" class="w3-bar-user w3-button">Login</a>
+
+    </div>
+  </div>
 </style>
 </head>
 <body>
