--- a/login.html
+++ b/login.html
@@ -69,7 +69,7 @@ span.psw {
 <title>Clarence a Catering</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="style.css">
 <style>
 body {font-family: "Times New Roman", Georgia, Serif;}
 h1, h2, h3, h4, h5, h6 {
@@ -80,16 +80,16 @@ h1, h2, h3, h4, h5, h6 {
 <body>
 
 <!-- Navbar (sit on top) -->
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-    <a href="#home" class="w3-bar-item w3-button">Rence Restaurant</a>
+<div class="top">
+  <div class="bar white padding card" style="letter-spacing:4px;">
+    <a href="#home" class="bar-item button">Rence Restaurant</a>
     <!-- Right-sided navbar links. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
-      <a href="index.html" class="w3-bar-item w3-button">Home</a>
-      <a href="about us.html" class="w3-bar-item w3-button">About Us</a>
-      <a href="contact.html" class="w3-bar-item w3-button">Contact Us</a>
-       <a href="registration.html" class="w3-bar-item w3-button">Registration</a>
-      <a href="login.html" class="w3-bar-user w3-button">Login</a>
+    <div class="right hide-small">
+      <a href="index.html" class="bar-item button">Home</a>
+      <a href="about.html" class="bar-item button">About Us</a>
+      <a href="contact.html" class="bar-item button">Contact Us</a>
+       <a href="registration.html" class="bar-item button">Registration</a>
+      <a href="login.html" class="bar-user button">Login</a>
 
     </div>
   </div>
