--- a/registration.html
+++ b/registration.html
@@ -67,16 +67,16 @@ a {
 }</style>
 </head>
 <body style="font-family:Verdana;">
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-    <a href="#home" class="w3-bar-item w3-button">Rence Restaurant</a>
+<div class="top">
+  <div class="bar white padding card" style="letter-spacing:4px;">
+    <a href="#home" class="bar-item button">Rence Restaurant</a>
     <!-- Right-sided navbar links. Hide them on small screens -->
-    <div class="w3-right w3-hide-small">
-      <a href="index.html" class="w3-bar-item w3-button">Home</a>
-      <a href="about.html" class="w3-bar-item w3-button">About Us</a>
-      <a href="contact.html" class="w3-bar-item w3-button">Contact Us</a>
-       <a href="registration.html" class="w3-bar-item w3-button">Registration</a>
-      <a href="login.html" class="w3-bar-user w3-button">Login</a>
+    <div class="right hide-small">
+      <a href="index.html" class="bar-item button">Home</a>
+      <a href="about.html" class="bar-item button">About Us</a>
+      <a href="contact.html" class="w3-bar-item button">Contact Us</a>
+       <a href="registration.html" class="bar-item button">Registration</a>
+      <a href="login.html" class="bar-user button">Login</a>
 
     </div>
   </div>
