--- a/contact.html
+++ b/contact.html
@@ -24,9 +24,9 @@
 </style>
 </head>
 <body style="font-family:Verdana;">
-<div class="w3-top">
-  <div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-    <a href="#home" class="w3-bar-item w3-button">Rence Restaurant</a>
+<div class="top">
+  <div class="bar white padding card" style="letter-spacing:4px;">
+    <a href="#home" class="bar-item button">Rence Restaurant</a>
     <!-- Right-sided navbar links. Hide them on small screens -->
    <div class="right hide-small">
       <a href="index.html" class="bar-item button">Home</a>
@@ -40,6 +40,7 @@
   </br>
   </br>
   </br>
+</br>
   
  <center>  <div class="widget-head">
                   <div class="pull-left">Contact Information</div>
