--- a/index.html
+++ b/index.html
@@ -1,45 +1,23 @@
 <!DOCTYPE html>
 <html>
 <title>Restaurant</title>
+<link href='style.css'  rel='stylesheet'>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-* {
-  box-sizing: border-box;
-}
+<body >
 
-@media only screen and (max-width:800px) {
-  /* For tablets: */
-  .main {
-    width: 100%;
-    padding: 0;
-  } 
-}
-@media only screen and (max-width:500px) {
-  /* For mobile phones: */
-  .menu, .main, .left {
-    width: 100%;
-  }
-}
-</style>
-</head>
-<body style="font-family:Verdana;">
-<div class="top">
-  <div class="bar white padding card" style="letter-spacing:4px;">
-    <a href="#home" class="bar-item button">Rence Restaurant</a>
+ <ul> 
     <!-- Right-sided navbar links. Hide them on small screens -->
-    <div class="right hide-small">
-      <a href="index.html" class="bar-item button">Home</a>
-      <a href="about.html" class="bar-item button">About Us</a>
-      <a href="contact.html" class="bar-item button">Contact Us</a>
-       <a href="registration.html" class="bar-item button">Registration</a>
-      <a href="login.html" class="bar-user button">Login</a>
+     <li><a href="index.html" class="">Home</a></li> 
+     <li> <a href="about.html" class="">About Us</a></li> 
+      <li><a href="contact.html" class="">Contact Us</a></li> 
+      <li> <a href="registration.html" class="">Registration</a></li> 
+      <li><a href="login.html" class="">Login</a></li> 
+</ul>
 
-    </div>
-  </div>
+
   <div class="main">
     <img src="front.jpg" style="width:100%">
   </div>
-
+</head>
 </body>
 </html>
