--- a/login.html
+++ b/login.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <html>
+
+<title>Restaurant</title>
+<link href='style.css'  rel='stylesheet'>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<body >
+
+ <ul> 
+    <!-- Right-sided navbar links. Hide them on small screens -->
+     <li><a href="index.html" class="">Home</a></li> 
+     <li> <a href="about.html" class="">About Us</a></li> 
+      <li><a href="contact.html" class="">Contact Us</a></li> 
+      <li> <a href="registration.html" class="">Registration</a></li> 
+      <li><a href="login.html" class="">Login</a></li> 
+</ul>
+
 <style>
 body {font-family: Arial, Helvetica, sans-serif;}
 form {border: 3px solid #f1f1f1;}
@@ -64,41 +77,11 @@ span.psw {
      width: 100%;
   }
 }
-<!DOCTYPE html>
-<html>
-<title>Clarence a Catering</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
-<style>
-body {font-family: "Times New Roman", Georgia, Serif;}
-h1, h2, h3, h4, h5, h6 {
-  font-family: "Playfair Display";
-  letter-spacing: 5px;
-}
 </style>
-<body>
-
-<!-- Navbar (sit on top) -->
-<div class="top">
-  <div class="bar white padding card" style="letter-spacing:4px;">
-    <a href="#home" class="bar-item button">Rence Restaurant</a>
-    <!-- Right-sided navbar links. Hide them on small screens -->
-    <div class="right hide-small">
-      <a href="index.html" class="bar-item button">Home</a>
-      <a href="about.html" class="bar-item button">About Us</a>
-      <a href="contact.html" class="bar-item button">Contact Us</a>
-       <a href="registration.html" class="bar-item button">Registration</a>
-      <a href="login.html" class="bar-user button">Login</a>
-
-    </div>
-  </div>
-</style>
-</head>
-<body>
-
+<br><br><br><br>
+<center>
 <h2>Login Form</h2>
-
+</center>
 <form action="/action_page.php" method="post">
 
 
