--- a/about.html
+++ b/about.html
@@ -1,44 +1,20 @@
 <!DOCTYPE html>
 <html>
 <title>Restaurant</title>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-* {
-  box-sizing: border-box;
-}
-
-@media only screen and (max-width:800px) {
-  /* For tablets: */
-  .main {
-    width: 100%;
-    padding: 0;
-  } 
-}
-@media only screen and (max-width:500px) {
-  /* For mobile phones: */
-  .menu, .main, .left {
-    width: 100%;
-  }
-}
-</style>
-</head>
-<body style="font-family:Verdana;">
-<div class="top">
-  <div class="bar white padding card" style="letter-spacing:4px;">
-    <a href="#home" class="bar-item w3-button">Rence Restaurant</a>
+<link href='style.css'  rel='stylesheet'>
+<body>
+ <ul> 
     <!-- Right-sided navbar links. Hide them on small screens -->
-   <div class="right hide-small">
-      <a href="index.html" class="bar-item button">Home</a>
-      <a href="about.html" class="bar-item button">About Us</a>
-      <a href="contact.html" class="bar-item button">Contact Us</a>
-       <a href="registration.html" class="bar-item button">Registration</a>
-      <a href="login.html" class="bar-user button">Login</a>
+     <li><a href="index.html" class="">Home</a></li> 
+     <li> <a href="about.html" class="">About Us</a></li> 
+      <li><a href="contact.html" class="">Contact Us</a></li> 
+      <li> <a href="registration.html" class="">Registration</a></li> 
+      <li><a href="login.html" class="">Login</a></li> 
+</ul>
 
-    </div>
   </div>
    <section id="contact-info">
-        </div>
+        <br><br><br><br><br><br><br>
             <div class="center wow fadeInDown">
                 <h2>What and how we do?</h2>
                 <p class="lead">Online Restaurant is a food ordering and delivery company based out of Negros Occidental, Negros. Online Restaurant was inspired by the thought of providing a complete food 
