--- a/registration.html
+++ b/registration.html
@@ -1,90 +1,89 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: black;
-}
 
-* {
+<title>Restaurant</title>
+<link href='style.css'  rel='stylesheet'>
+<head>
+<body >
+
+ <ul> 
+    <!-- Right-sided navbar links. Hide them on small screens -->
+     <li><a href="index.html" class="">Home</a></li> 
+     <li> <a href="about.html" class="">About Us</a></li> 
+      <li><a href="contact.html" class="">Contact Us</a></li> 
+      <li> <a href="registration.html" class="">Registration</a></li> 
+      <li><a href="login.html" class="">Login</a></li> 
+</ul>
+
+<style>
+body {font-family: Arial, Helvetica, sans-serif;}
+form {border: 3px solid #f1f1f1;}
+
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
   box-sizing: border-box;
 }
 
-/* Add padding to containers */
-.container {
-  padding: 16px;
-  background-color: white;
-}
-
-/* Full-width input fields */
-input[type=text], input[type=password] {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  display: inline-block;
-  border: none;
-  background: white;
-}
-
-input[type=text]:focus, input[type=password]:focus {
-  background-color: white;
-  outline: none;
-}
-
-/* Overwrite default styles of hr */
-hr {
-  border: 1px solid #f1f1f1;
-  margin-bottom: 25px;
-}
-
-/* Set a style for the submit button */
-.registerbtn {
+button {
   background-color: #4CAF50;
   color: white;
-  padding: 16px 20px;
+  padding: 14px 20px;
   margin: 8px 0;
   border: none;
   cursor: pointer;
   width: 100%;
-  opacity: 0.9;
 }
 
-.registerbtn:hover {
-  opacity: 1;
+button:hover {
+  opacity: 0.8;
 }
 
-/* Add a blue text color to links */
-a {
-  color: dodgerblue;
+.cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
 }
 
-/* Set a grey background color and center the text of the "sign in" section */
-.signin {
-  background-color: white;
+.imgcontainer {
   text-align: center;
-}</style>
-</head>
-<body style="font-family:Verdana;">
-<div class="top">
-  <div class="bar white padding card" style="letter-spacing:4px;">
-    <a href="#home" class="bar-item button">Rence Restaurant</a>
-    <!-- Right-sided navbar links. Hide them on small screens -->
-    <div class="right hide-small">
-      <a href="index.html" class="bar-item button">Home</a>
-      <a href="about.html" class="bar-item button">About Us</a>
-      <a href="contact.html" class="w3-bar-item button">Contact Us</a>
-       <a href="registration.html" class="bar-item button">Registration</a>
-      <a href="login.html" class="bar-user button">Login</a>
+  margin: 24px 0 12px 0;
+}
 
-    </div>
-  </div>
+img.avatar {
+  width: 40%;
+  border-radius: 50%;
+}
+
+.container {
+  padding: 16px;
+}
+
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+  span.psw {
+     display: block;
+     float: none;
+  }
+  .cancelbtn {
+     width: 100%;
+  }
+}
 </style>
-</head>
-<body>
+<br><br><br><br>
+<center>
+<h2>Register</h2>
+</center>
+<form action="/action_page.php" method="post">
 
-<form action="/action_page.php">
   <div class="container">
     <h1>Register</h1>
    
@@ -102,8 +101,6 @@ a {
 
     <button type="submit" class="registerbtn">Register</button>
   </div>
-  
- 
 </form>
 
 </body>
